INITIAL SETUP FOR TIDY-ER CRAWL
initial files and setup to make core crawl functions more inline with the tidyverse conventions and piping.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Author: Devin S. Johnson
 Maintainer: Devin S. Johnson <devin.johnson@noaa.gov>
 Depends:
     R (>= 2.10)
-Imports:
+Imports: 
     mvtnorm,
     Rcpp (>= 0.11.1),
     methods,
@@ -15,11 +15,12 @@ Imports:
     dplyr,
     raster,
     gdistance,
-    sp
+    sp,
+    magrittr
 LinkingTo: 
     Rcpp,
     RcppArmadillo
-Suggests:
+Suggests: 
     ggplot2,
     rgdal,
     argosfilter,
@@ -28,7 +29,8 @@ Suggests:
     xts,
     broom,
     sf,
-    doParallel
+    doParallel,
+    testthat
 Description: Fit continuous-time
     correlated random walk models with time indexed
     covariates to animal telemetry data. The model is fit using the Kalman-filter on
