--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(crw_as_sf,crwPredict)
 S3method(crw_as_tibble,crwIS)
 S3method(crw_as_tibble,crwPredict)
 S3method(print,crwFit)
+export("%>%")
 export(aic.crw)
 export(argosDiag2Cov)
 export(as.flat)
@@ -35,6 +36,7 @@ importFrom(gdistance,transition)
 importFrom(graphics,layout)
 importFrom(graphics,lines)
 importFrom(graphics,plot)
+importFrom(magrittr,"%>%")
 importFrom(methods,as)
 importFrom(methods,slot)
 importFrom(raster,cellFromXY)
