UPDATE DOCUMENTATION TO USE MD

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(crwSamplePar)
 export(crwSimulator)
 export(crw_as_sf)
 export(crw_as_tibble)
+export(crw_broom)
 export(displayPar)
 export(expandPred)
 export(fillCols)
@@ -27,7 +28,6 @@ export(flatten)
 export(get_restricted_segments)
 export(intToPOSIX)
 export(mergeTrackStop)
-export(tidy_crwFit)
 import(dplyr)
 import(mvtnorm)
 importFrom(Rcpp,evalCpp)
